# noir-ivc

./: Cargo.toml  LICENSE
src/: execute.rs  field.rs  gate.rs  lib.rs  load.rs  program.rs  tests.rs
test_folder/invert/: Nargo.toml
test_folder/invert/inputs/: hint_0.json  hint_1.json
test_folder/invert/src/: main.nr
