[package]
edition = "2021"
name = "noir-ivc"
version = "0.1.0"

[dependencies]
acvm = {git = "https://github.com/noir-lang/noir", rev = "2b4853e", default-features = false}
ark-ff = {version = "0.4.2", default-features = false}
arkworks_backend = {git = "https://github.com/Sun-Jc/arkworks_backend"}

bellpepper-core = {version = "0.4.0", default-features = false}

ff = {version = "0.13.0", features = ["derive"]}

serde = "1.0"
serde_json = "1.0"

num = "0.4"
thiserror = "1.0"

ivc-program = {git = "https://github.com/Sun-Jc/ivc-program"}

[dev-dependencies]
ark-bn254 = "0.4.0"
halo2curves = "0.6.0"
nova-snark = {version = "0.37.0", default-features = false}
